--- a/Vue/TS/package.json
+++ b/Vue/TS/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node ./dist/index.js",
+    "build": "tsc -p .",
+    "serve": "nodemon ./src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,9 +19,18 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.7",
     "morgan": "^1.10.0",
-    "socket.io": "^4.4.1"
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^17.0.21",
     "nodemon": "^2.0.15"
   }
 }
