--- a/Vue/TS/package.json
+++ b/Vue/TS/package.json
@@ -14,11 +14,14 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.7",
     "morgan": "^1.10.0",
+    "pino": "^7.9.1",
+    "pino-pretty": "^7.5.4",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   },
@@ -31,6 +34,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.21",
+    "@types/pino": "^7.0.5",
     "nodemon": "^2.0.15"
   }
 }
